# bridge-style

./: CHANGES.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  PUBLISH.md  README.md  pyproject.toml  setup.py
.github/workflows/: notify.yaml  release.yml
bridgestyle/: customgeostylerproperties.py  style2style.py
bridgestyle/arcgis/: __init__.py  constants.py  expressions.py  togeostyler.py  wkt_geometries.py
bridgestyle/geostyler/: __init__.py
bridgestyle/mapboxgl/: __init__.py  fromgeostyler.py  group.py  mapboxgl.py  togeostyler.py
bridgestyle/mapfile/: fromgeostyler.py
bridgestyle/mapserver/: __init__.py  fromgeostyler.py  togeostyler.py
bridgestyle/qgis/: __init__.py  expressions.py  fromgeostyler.py  geostyler.py  togeostyler.py
bridgestyle/sld/: __init__.py  fromgeostyler.py  sld.py  togeostyler.py
bridgestyle/test/: arcgistogeostyler.py
bridgestyle/test/data/arcgis/: Cartographic Line.lyrx  Cities.lyrx  Marker Line.lyrx  test.lyrx
bridgestyle/test/data/qgis/line/: testdata.gpkg
bridgestyle/test/data/qgis/points/: testlayer.gpkg
docs/: arcgis.md  geostyler.md  index.md  mapbox-gl.md  mapserver.md  qgis.md  sld.md
src/bridgestyle/arcgis/: constants.py  expressions.py  fromgeostyler.py  togeostyler.py  wkt_geometries.py
src/bridgestyle/mapboxgl/: fromgeostyler.py
src/bridgestyle/mapserver/: fromgeostyler.py  togeostyler.py
src/bridgestyle/qgis/: __init__.py  expressions.py  togeostyler.py
src/bridgestyle/sld/: fromgeostyler.py  parsecdata.py
test/: arcgistogeostyler.py  context.py  labcolortest.py  qgistogeostyler.py
test/data/arcgis/: Countries.lyrx  Hash Line.lyrx  lab_colors_test.lyrx
