[project]
name = "bridgestyle"
authors = [
    {name = "GeoCat BV", email = "volaya@geocat.net"},
]
description = "A Python library to convert between different map style formats"
keywords = ["GeoCat", "Bridge", "style", "symbology", "styling", "mapping", "SLD", "cartography",
              "Mapfile", "CIM", "GeoStyler", "Mapbox", "QGIS", "GeoServer", "Esri"]
license = "MIT"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/GeoCat/bridge-style"

[project.scripts]
style2style = "bridgestyle.style2style:main"

[tool.setuptools.dynamic]
version = {attr = "bridgestyle.__version__"}

[tool.zest-releaser]
python-file-with-version = "src/bridgestyle/version.py"
history-file = "CHANGES.md"
release = false
upload-pypi = false
