[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "bridgestyle"
requires-python = ">=3.9"
authors = [
    {name = "GeoCat BV", email = "bridge@geocat.net"},
]
description = "A Python library to convert between different map style formats"
keywords = ["GeoCat", "Bridge", "style", "symbology", "styling", "mapping", "SLD", "cartography",
              "Mapfile", "CIM", "GeoStyler", "Mapbox", "QGIS", "GeoServer", "Esri"]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Repository = "https://github.com/GeoCat/bridge-style"

[project.scripts]
style2style = "bridgestyle.style2style:main"

[tool.setuptools.dynamic]
version = {attr = "bridgestyle.__version__"}

[tool.zest-releaser]
python-file-with-version = "src/bridgestyle/version.py"
history-file = "CHANGES.md"
release = false
upload-pypi = false
